feat: integrate IndexedDB and enhance order page functionality
- Integrated IndexedDB in Angular UI for storing shopping cart items.
- Rendered the order page dynamically based on user roles:
  - ADMIN: Display all orders.
  - CLIENT: Display only their orders.
- Fixed various bugs in the backend to improve stability and functionality.

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
               - POST
               - PUT
               - DELETE
+              - PATCH
   application:
     name: gateway-service
   config:
