--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=order-service
 spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999}
 server.port=8081
+
+spring.jpa.hibernate.ddl-auto=update
