--- a/e-com-ui/package.json
+++ b/e-com-ui/package.json
@@ -22,8 +22,11 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "keycloak-angular": "^19.0.2",
     "ngx-cookie-service": "^19.0.0",
+    "ngx-indexed-db": "^19.3.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
